// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when focused 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "height": "100%",
      "justifyContent": "center",
      "width": 62,
    }
  }
>
  <Image
    source={123}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#004098",
        "fontSize": 9,
      }
    }
  >
    ABC
  </Text>
</View>
`;

exports[`renders correctly when unfocsed 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "height": "100%",
      "justifyContent": "center",
      "width": 62,
    }
  }
>
  <Image
    source={456}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#4f5b77",
        "fontSize": 9,
      }
    }
  >
    ABC
  </Text>
</View>
`;
